software-store (0.2.2) UNRELEASED; urgency=low

  * softwarestore/view/appdetailsview.py:
    - fix icon theme name
  * softwarestore/view/appview.py:
    - ignore Unknown file format errors
  * softwarestore/view/appview.py:
    - fix incorrect type mixing in iter_next (LP: #422036)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 07 Sep 2009 08:51:35 +0200

software-store (0.2.1) karmic; urgency=low

  * data/ui/SoftwareStore.ui:
    - add menu shortcuts (thanks to seb128)
  * show loading animation when fetching screenshots 
    (thanks to rugby471)
  * softwarestore/app.py:
    - fix crash when searching in sub-categories
  * softwarestore/view/appdetailsview.py:
    - add workaround for missing xpm rendering with webkit
    - scale icons to default icon size
    - fix icon loading from the custom icon path
  * softwarestore/app.py:
    - when started multiple times, focus the already running 
      one
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 04 Sep 2009 17:33:33 +0200

software-store (0.2.0) karmic; urgency=low

  * merge from rugby471, lots of fixes, improvements, 
    many thanks!
  * merge the "webkit" branch:
    - improved layout for the application details view
    - improved layout for the categories view
    - support for screenshots from screenshots.debian.net
    - add dependency to python-webkit
  * add man-page (thanks to rugby471)
  * software-store:
    - improve test if running from a local checkout (LP: #420784)
  * add animation to the pending view
  * fix bug in search clearning
  * show find icon in the search entry
  * open on the center of the screen by default (thanks to mac_v)
  * show overlay icon in the details view for installed software

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 03 Sep 2009 11:35:43 +0200

software-store (0.1.3) karmic; urgency=low

  * deal with apps that require adding repositories (like
    the stuff from the partner repository)
  * exit when the main window is closed
  * debian/postrm: