@@ -6,6 +6,9 @@ software-store (0.2.2) UNRELEASED; urgency=low
     - ignore Unknown file format errors
   * softwarestore/view/appview.py:
     - fix incorrect type mixing in iter_next (LP: #422036)
+  * softwarestore/view/appdetailsview.py:
+    - if the package is not available in the archive and there
+      is no channel for it, do not display any buttons (LP: #424473)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 07 Sep 2009 08:51:35 +0200
 
